# yet_another_icp_implementation

./: .gitignore  CMakeLists.txt  CorrespondenceMetrics.cpp  CorrespondenceMetrics.h  CorrespondencePicker.cpp  CorrespondencePicker.h  Icp.cpp  Icp.hpp  PointCloud.cpp  PointCloud.hpp  README.md  main.cpp  point_cloud_util.cpp  point_cloud_util.hpp  resources.h  test.cpp  util.cpp  util.h
data/: edge.pcd  rectangle.pcd
testing/: CMakeLists.txt
testing/icp_tests/: CMakeLists.txt  affine_transform_test.cpp  correspondece_tests.cpp  icp_integration_tests.cpp  point_cloud_util.hpp  util_tests.cpp
